==> Jisatsu13/STM32-ST7735-ll-/ST7735.c <==
#include "ST7735.h"
#include "stdlib.h"
#define TFT_LED_H() LL_GPIO_SetOutputPin(LED_ST7735_GPIO_Port, LED_ST7735_Pin)
#define TFT_LED_L() LL_GPIO_ResetOutputPin(LED_ST7735_GPIO_Port, LED_ST7735_Pin)
#define TFT_CS_H() LL_GPIO_SetOutputPin(CS_ST7735_GPIO_Port, CS_ST7735_Pin)
#define TFT_CS_L() LL_GPIO_ResetOutputPin(CS_ST7735_GPIO_Port, CS_ST7735_Pin)
#define TFT_A0_H() LL_GPIO_SetOutputPin(A0_ST7735_GPIO_Port, A0_ST7735_Pin)
#define TFT_A0_L() LL_GPIO_ResetOutputPin(A0_ST7735_GPIO_Port, A0_ST7735_Pin)
#define TFT_RST_H() LL_GPIO_SetOutputPin(RST_ST7735_GPIO_Port, RST_ST7735_Pin)
#define TFT_RST_L() LL_GPIO_ResetOutputPin(RST_ST7735_GPIO_Port, RST_ST7735_Pin)

void ST7735_Reset()
{
    TFT_RST_L();
    LL_mDelay(5);
    TFT_RST_H();
}

void ST7735_WriteCommand(SPI_TypeDef *SPIx, uint8_t cmd)
{
	TFT_A0_L();
	SPI_Send8Bits(SPIx, cmd);
}

void ST7735_WriteData(SPI_TypeDef *SPIx, uint8_t* buff, uint16_t buff_size)
{
    TFT_A0_H();
    for(uint16_t i = 0; i < buff_size; i++)
    {
    	SPI_Send8Bits(SPIx, buff[i]);
    }
}

void DisplayInit(SPI_TypeDef *SPIx, const uint8_t *addr)
{
    uint8_t numCommands, numArgs;
    uint16_t ms;

    numCommands = *addr++;
    while(numCommands--) {
        uint8_t cmd = *addr++;
        ST7735_WriteCommand(SPIx, cmd);

        numArgs = *addr++;
        // If high bit set, delay follows args
        ms = numArgs & DELAY;
        numArgs &= ~DELAY;
        if(numArgs) {
            ST7735_WriteData(SPIx, (uint8_t*)addr, numArgs);
            addr += numArgs;
        }

        if(ms) {
            ms = *addr++;
            if(ms == 255) ms = 500;
            LL_mDelay(ms);
        }
    }
}

void ST7735_FillRectangle(SPI_TypeDef *SPIx, uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color)
{
    if((x >= _width) || (y >= _height)) return;
    if((x + w - 1) >= _width) w = _width - x;
    if((y + h - 1) >= _height) h = _height - y;

    TFT_CS_L();
    ST7735_SetAddressWindow(SPIx, x, y, x+w-1, y+h-1);

    for(uint16_t i = 0; i < w * h; i++)
    {
    	buf_DMA[i * 2] = color >> 8;
    	buf_DMA[i * 2 + 1] = color & 0xFF;
    }
    ST7735_WriteDataDMA(SPIx, w * h * 2);
    TFT_CS_H();
}
